--- a/configs/config.yml
+++ b/configs/config.yml
@@ -1,1 +1,20 @@
-port: "8080"
+server:
+  grpc_port: "8080"
+  host: "0.0.0.0"
+
+ml:
+  service_url: "http://localhost:5000"
+  timeout: "30s"
+
+storage:
+  path: "./storage"
+
+logging:
+  level: "info"
+
+db:
+  host: "localhost"
+  port: "5432"
+  username: "postgres"
+  dbname: "hack"
+  sslmode: "disable"
