--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,18 @@ fastapi==0.111.1
 uvicorn[standard]==0.24.0
 numpy==1.26.0
 opencv-python-headless==4.8.1.78
-torch==2.2.0
+torch==2.2.1
 torchvision==0.17.1
 ultralytics==8.1.6
+
+starlette==0.37.2
+pydantic==2.11.9
+typing-extensions==4.15.0
+fastapi-cli==0.0.11
+httpx==0.28.1
+jinja2==3.1.6
+python-multipart==0.0.20
+email_validator==2.3.0
+
+click==8.2.1
+h11==0.16.0
