--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ fastapi==0.111.1
 uvicorn[standard]==0.24.0
 numpy==1.26.0
 opencv-python-headless==4.8.1.78
-torch==2.2.1
-torchvision==0.17.1
+torch==2.2.1+cpu
+torchvision==0.17.1+cpu
 ultralytics==8.1.6
 
 starlette==0.37.2
